spacing issue

--- a/docroot/themes/cypress_store/less/style.less
+++ b/docroot/themes/cypress_store/less/style.less
@@ -102,6 +102,7 @@ body{
 		}
 		.region-header .primary-menu .primary-menu-list {
 		    padding-left: 60px;
+		    margin-bottom: 14px;
 		}
 	}
 	
@@ -166,7 +167,7 @@ body{
 
 		    .primary-menu {
 			    position: relative;
-			    top: 2.6rem;
+			    top: 2.9rem;
 			    line-height: 16.1px;
 
 			    li {
@@ -434,9 +435,7 @@ li.menu-item.level-2 {
 
 /*End styles for header*/
 
-.main{
-	margin-top: 15px;
-}
+
 
 /*footer styles*/
 footer{
@@ -612,6 +611,10 @@ footer{
 	    z-index: 999;
 	    margin-right: 0.5em;
 	}
+	.mobile-menu a:focus {
+	    outline: none;
+	    text-decoration: none;
+	}
 	.user-icon {
 	    position: relative;
 	    right: 5px;
@@ -671,6 +674,10 @@ footer{
 	    position: absolute;
 	    top: 22px;
 	    transform: rotate(-130deg);
+	}
+
+	.main{
+		margin-top: 22px;
 	}
 	/*footer styles responsive*/
 	footer{
@@ -929,7 +936,7 @@ footer{
 	    list-style-type: none;
 	    display: inline-block;
 	    width: 30px;
-	    margin-left: 8px;
+	    margin-left: 13px;
 	}
 	.icons img {
 	    width: 30px;
@@ -951,6 +958,10 @@ footer{
 	    border-radius: 4px;
 	    padding: 15px;
 	    background: #ffffff;
+	}
+	.mobile-menu a:focus {
+	    outline: none;
+	    text-decoration: none;
 	}
 	ul.language-menu {
 	    margin-top: 0 !important;
